# todo

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  docker-compose.prod.yaml  justfile
src/: db.rs  main.rs  models.rs  ui.rs
todo-api/: Cargo.toml  Dockerfile
todo-api/migrations/: 20250830211001_create_todos.sql  20250830222914_add_parent_task_id.sql  20260505120000_add_archived_to_tasks.sql  20260506120000_init.sql
todo-api/src/: app.rs  db.rs  dto.rs  error.rs  handlers.rs  lib.rs  main.rs
todo-client/: Cargo.toml
todo-client/src/: client.rs  crypto.rs  lib.rs  models.rs
todo-core/: Cargo.toml  build.rs
todo-core/migrations/: 20260505121000_add_due_date_to_tasks.sql
todo-core/src/: db.rs  lib.rs  models.rs
todo-tui/: Cargo.toml
todo-tui/src/: config.rs  main.rs  ui.rs  ui_helpers.rs
