[workspace]
resolver = "3"
members = [
    "todo-core",
    "todo-tui",
]

[workspace.dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
clap = { version = "4.5.46", features = ["derive"] }
dirs = "6.0"
ratatui = { version = "0.29.0", features = ["crossterm"] }
sqlx = { version = "0.8.6", features = ["sqlite", "chrono", "migrate", "runtime-tokio"] }
tokio = { version = "1.47.1", features = ["full"] }