[workspace]
resolver = "3"
members = ["todo-api", "todo-client", "todo-tui"]

[workspace.dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.46", features = ["derive"] }
dotenvy = "0.15.7"
ratatui = { version = "0.30.0", features = ["crossterm"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
  "sqlite",
  "chrono",
  "migrate",
  "runtime-tokio",
] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
tui-input = "0.15.3"
