[workspace]
resolver = "3"
members = ["todo-api", "todo-client", "todo-tui"]

[workspace.dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.46", features = ["derive"] }
dotenvy = "0.15.7"
ratatui = { version = "0.30.0", features = ["crossterm"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
base64 = "0.22.1"
bip39 = { version = "2.2.0", features = ["rand"] }
blake3 = "1.8.2"
chacha20poly1305 = "0.10.1"
toml = "0.9.8"
sqlx = { version = "0.8.6", features = [
  "sqlite",
  "chrono",
  "migrate",
  "runtime-tokio",
] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
tui-input = "0.15.3"
