[package]
name = "todo-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
todo-client = { path = "../todo-client" }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
