[package]
name = "todo-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bip39 = { workspace = true }
blake3 = { workspace = true }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
