[package]
name = "todo-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
todo-client = { path = "../todo-client" }
toml = { workspace = true }
tui-input = { workspace = true }
